--- a/index.html
+++ b/index.html
@@ -4,9 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3-Architects</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body class="work-sans-font ">
+
+ <header class="bg-lite">
+        <nav class="navbar display-flex">
+            <h3 class="logo">G3 Architects</h3>
+            <ul class="nav-links display-flex dark-3">
+
+                <li class="nav-item "><a href="" class="nav-link dark-2">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark-2">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark-2">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark-2">Login</a></li>
+
+            </ul>
+        </nav>
+        <div class="banner">
+           <div class="banner-content">
+             <h1 class="banner-h">Brand New Group of Architects </h1>
+            <p class="banner-des dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn1 btns">Explore More</button>
+           </div>
+            <img class="banner-img" src="images/banner.png" alt="">
+        </div>
+
+
+    </header>
+
+    <main>
+        <section class="features display-flex max-width margin-top">
+            <div class="team-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="feature-dtl">
+                <h3 class="feature-title"><span class="span1 dark-3">Quick list</span> of Our
+                <span class="span2">Features</span></h3>
+                <p class="feature-details dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn2 btns">Explore More</button>
+            </div>
+        </section>
+        <section class="love-ft max-width margin-top"></section>
+        <section class="some-facts max-width margin-top">
+            <div class="div-1">
+            <h2 class="facts-title t">Some Facts</h2>
+            <p class="facts-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="prizes">
+                <div class="prize display-flex">
+                <img src="images/icons/ribon.png" alt="">
+                <h2 class="prize-h">54</h2>
+                <p class="prize-p dark-3">Award Winning</p>
+            </div>
+            <div class="prize display-flex">
+                <img src="images/icons/projects.png" alt="">
+                <h2 class="prize-h">1458</h2>
+                <p class="prize-p dark-3">Project Finished</p>
+            </div>
+            <div class="prize display-flex">
+                 <img src="images/icons/customers.png" alt="">
+                <h2 class="prize-h">590</h2>
+                <p class="prize-p dark-3">Clients Worked</p>
+            </div>
+            <div class="prize display-flex">
+                   <img src="images/icons/email.png" alt="">
+                <h2 class="prize-h">54</h2>
+                <p class="prize-p dark-3">Emasil Send</p>
+            </div>
+            </div>
+        </section>
+        <section class="sponsor max-width margin-top">
+           <div class="sponsor-info">
+             <h4 class="sponsor-h">Our Sponsor</h4>
+            <p class="sponsor-p dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+           </div>
+            <div class="sponsor-img">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer margin-top dark-3">
+   All rights reserved copyright @2023 startup landing page design
+    </footer>
 </body>
 </html>
