--- a/index.html
+++ b/index.html
@@ -50,7 +50,38 @@
                 <button class="btn2 btns">Explore More</button>
             </div>
         </section>
-        <section class="love-ft max-width margin-top"></section>
+        <section class="love-ft max-width margin-top">
+            <div class="div1">
+                <h3 class="love-ft-h">Features you will<br> love & enjoy</h3>
+                <p class="love-ft-p dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="cards">
+                    <h4 class="cards-h">Dexktop & Mobile Version</h4>
+                    <p class="cards-p dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="cards">
+                    <h4 class="cards-h">Drag & Drop Builder</h4>
+                    <p class="cards-p dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="cards">
+                    <h4 class="cards-h">Awesome Modern Design</h4>
+                    <p class="cards-p dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="cards">
+                    <h4 class="cards-h">Super Easy to Edit</h4>
+                    <p class="cards-p dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="div2">
+                <img src="images/architect.png" alt="">
+                <button class="btns btn4">
+                    <span id="btn-span1">10+Year</span><br>
+                    <span id="btn-span2">Experience</span>
+                </button>
+            </div>
+
+        </section>
+
+
         <section class="some-facts max-width margin-top">
             <div class="div-1">
             <h2 class="facts-title t">Some Facts</h2>
